# kryx-codecs-opus

./: .eslintrc.json  .gitattributes  .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.es.md  README.md  index.d.ts  index.js  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
__tests__/: encoder.test.ts  index.test.ts
crates/opus-core/: Cargo.toml  build.rs
crates/opus-core/src/: decoder.rs  descriptor.rs  encoder.rs  error.rs  lib.rs  sys.rs
crates/opus-node/: Cargo.toml
crates/opus-node/src/: lib.rs
docs/: IMPLEMENTATION.md
examples/: basic.ts
scripts/: create-npm-dirs.js  fix-dts.js  sync-versions.js
src/: decoder.ts  encoder.ts  index.ts  native.ts  register.ts  types.ts
zig/: README.md  build.zig
zig/include/: opus_shim.h
zig/src/: chkstk.c  opus_shim.zig
