[package]
name = "opus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Opus codec core for @kryxjs/codecs-opus (M2: libopus 1.5.2 statically linked via Zig build)"
build = "build.rs"

[lib]
name = "opus_core"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
# M2: no bindgen yet — sys.rs is hand-written for the minimal surface.
# bindgen will be added in M3 when we auto-generate from zig/include/opus_shim.h.

[features]
default = []
